[tool.poetry]
name = "repl_python3_AdriBotRP"
version = "0.1.0"
description = ""
authors = ["nathanaellampro <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.1.2"
replit = "^3.2.4"
"discord-interactions.py" = "^0.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
